# EarthEcho

./: EarthEcho.jucer  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
builder_linux/: CMakeLists.txt  README.md  builder_linux.sh  earthecho.desktop  installer_linux.sh
